--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
     "@tailwindcss/vite": "^4.1.17",
+    "lucide-react": "^0.564.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.10.1",
+    "react-router-dom": "^7.13.0",
     "styled-components": "^6.1.19",
     "tailwindcss": "^4.1.17",
     "three": "^0.182.0"
